<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simlan_gazebo_environment</name>
  <version>2.2.6</version>
  <description>Gazebo simulation</description>
  <license>Apache 2.0</license>
  <maintainer email="hamid.ebadi@gmail.com">Hamid Ebadi</maintainer>
  <author email="hamid.ebadi@gmail.com">Hamid Ebadi</author>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <!-- <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export> -->
  <export>
    <build_type>ament_cmake</build_type>
    <ros_gz_sim>
      <gazebo>
        <resource_path>${prefix}/models</resource_path>
      </gazebo>
    </ros_gz_sim>
  </export>
</package>
