<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualize_real_data</name>
  <version>1.0.0</version>
  <description>
    Converts .jpg data to pointcloud message,
    trajectory-data to MarkerArray message and
    saves it in a rosbag for later playback.
  </description>
  <maintainer email="linus@dynorobotics.se">Linus Gustafsson</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend>pathlib</exec_depend>
  <exec_depend>cv2</exec_depend>
  <exec_depend>json</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>yaml</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
