<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>integration_tests</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="par.aronsson@infotiv.se">ros</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>pallet_truck_bringup</test_depend>
  <test_depend>simlan_bringup</test_depend>

  <test_depend>pytest</test_depend>
  <test_depend>launch_pytest</test_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>simlan_bringup</exec_depend>
  <exec_depend>pallet_truck_bringup</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
