<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pallet_truck_navigation</name>
  <version>1.0.4</version>
  <description>Launch files and code for autonomous navigation of the pallet_truck</description>
  <maintainer email="rkreinin@clearpathrobotics.com">rkreinin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
