<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_description</name>
  <version>0.0.1</version>
  <description>
    URDF and mesh description for the Robotiq 2F-140 gripper (localized for SIMLAN).
    Derived from PickNikRobotics/ros2_robotiq_gripper.
  </description>

  <author>Cory Crean</author>
  <maintainer email="alex.moriarty@picknik.ai">Alex Moriarty</maintainer>

  <license file="LICENSE">BSD-3-Clause</license>

  <url type="repository">https://github.com/PickNikRobotics/ros2_robotiq_gripper</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
